refactor: replace table parallel lists with enum- and control-driven content layout