@@ -1,5 +1,8 @@
 package kmlib.starsector.ui.controls;
 
+import kmlib.starsector.ui.text.TextSpan;
+import kmlib.starsector.ui.widgets.RowSlot;
+
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
@@ -16,8 +19,9 @@ import static org.assertj.core.api.Assertions.assertThatThrownBy;
  * never clicked (and so are not {@link ControlSpec.Interactive}), the horizontal radios, the vertical
  * radio table, and the tabs row. These fix the "a single cell is lit or nothing", "a label / divider has
  * no cell and no action" conventions in one place so no host re-derives them. The variants make the
- * illegal shapes unrepresentable - a checkbox has no icon column to mis-set - so only the two numeric
- * guards a vertical table's own construction can still trip are pinned here.
+ * illegal shapes unrepresentable - a checkbox has no leading column to mis-set, and a table's rows hold
+ * their own slots rather than lists that could fall out of step - so only the guards a vertical table's
+ * own construction can still trip are pinned here.
  */
 final class ControlSpecTest {
 
@@ -33,8 +37,14 @@ final class ControlSpecTest {
                 .isInstanceOf(ControlSpec.Interactive.class);
             assertThat(ControlSpec.HorizontalRadio.of(List.of("A"), 0, ControlAction.NONE))
                 .isInstanceOf(ControlSpec.Interactive.class);
-            assertThat(VerticalTableSpecs.buildPlainTable(List.of("A"), 0, ControlAction.NONE,
-                ReselectBehaviour.INERT)).isInstanceOf(ControlSpec.Interactive.class);
+
+            assertThat(VerticalTableSpecs.buildSegmentedList(
+                    List.of("A"),
+                    0,
+                    ControlAction.NONE,
+                    ReselectBehaviour.INERT))
+                .isInstanceOf(ControlSpec.Interactive.class);
+
             assertThat(new ControlSpec.Tabs(List.of("A"), List.of(), 0, ControlAction.NONE))
                 .isInstanceOf(ControlSpec.Interactive.class);
         }
@@ -43,8 +53,10 @@ final class ControlSpecTest {
         void labelAndDividerAreNotInteractive() {
             // A caption and a rule are drawn but never clicked, so they are chrome, not Interactive - the
             // one property the input listener reads to skip them.
-            assertThat(new ControlSpec.Label("Names")).isNotInstanceOf(ControlSpec.Interactive.class);
-            assertThat(new ControlSpec.Divider()).isNotInstanceOf(ControlSpec.Interactive.class);
+            assertThat(new ControlSpec.Label("Names"))
+                .isNotInstanceOf(ControlSpec.Interactive.class);
+            assertThat(new ControlSpec.Divider())
+                .isNotInstanceOf(ControlSpec.Interactive.class);
         }
     }
 
@@ -53,23 +65,54 @@ final class ControlSpecTest {
 
         @Test
         void constructorRejectsAColumnCountBelowOne() {
-            // A column count is how many columns the options wrap across; a count below one cannot lay
+            // A column count is how many columns the rows fold across; a count below one cannot lay
             // out any column, so it fails at construction rather than dividing by a zero column count.
-            assertThatThrownBy(() -> new ControlSpec.VerticalTable(List.of("A"), List.of(), List.of(),
-                List.of(), ControlSpec.NO_SELECTION, ControlAction.NONE, ReselectBehaviour.DESELECT,
-                0, false))
+            assertThatThrownBy(() -> new ControlSpec.VerticalTable(
+                    VerticalTableSpecs.buildRows(List.of("A")),
+                    RowGeometry.COLUMNS,
+                    ControlSpec.NO_SELECTION,
+                    ControlAction.NONE,
+                    ReselectBehaviour.DESELECT,
+                    0,
+                    false))
                 .isInstanceOf(IllegalArgumentException.class);
         }
 
         @Test
-        void constructorDoesNotAliasTheCallersLabelList() {
+        void constructorRejectsAMissingRowGeometry() {
+            // How the rows lay out is stated rather than inferred, so a table built without that answer
+            // fails where its builder is still on the stack rather than at the first measurement.
+            assertThatThrownBy(() -> new ControlSpec.VerticalTable(
+                    VerticalTableSpecs.buildRows(List.of("A")),
+                    null,
+                    ControlSpec.NO_SELECTION,
+                    ControlAction.NONE,
+                    ReselectBehaviour.DESELECT,
+                    ControlSpec.SINGLE_COLUMN,
+                    false))
+                .isInstanceOf(NullPointerException.class);
+        }
+
+        @Test
+        void constructorDoesNotAliasTheCallersRowList() {
             // The caller may hand in a mutable list it goes on to reuse; the table must copy it, so a
-            // later mutation of the caller's list cannot rewrite the drawn labels.
-            var callerLabels = new ArrayList<String>(List.of("Factions", "Alliances"));
-            var table = new ControlSpec.VerticalTable(callerLabels, List.of(), List.of(), List.of(),
-                0, ControlAction.NONE, ReselectBehaviour.DESELECT, ControlSpec.SINGLE_COLUMN, false);
-            callerLabels.set(0, "Mutated");
-            assertThat(table.labels()).containsExactly("Factions", "Alliances");
+            // later mutation of the caller's list cannot rewrite the drawn rows.
+            var callerRows = new ArrayList<>(VerticalTableSpecs.buildRows(
+                List.of("Factions", "Alliances")));
+
+            var table = new ControlSpec.VerticalTable(
+                callerRows,
+                RowGeometry.COLUMNS,
+                0,
+                ControlAction.NONE,
+                ReselectBehaviour.DESELECT,
+                ControlSpec.SINGLE_COLUMN,
+                false);
+
+            callerRows.set(0, VerticalTableSpecs.buildRow("Mutated"));
+
+            assertThat(table.labels())
+                .containsExactly("Factions", "Alliances");
         }
     }
 
@@ -79,16 +122,23 @@ final class ControlSpecTest {
         @Test
         void litLightsCellZeroWhenOn() {
             var checkbox = ControlSpec.Checkbox.lit("Muted", true, ControlAction.NONE);
-            assertThat(checkbox.labels()).containsExactly("Muted");
-            assertThat(checkbox.selectedIndex()).isZero();
-            assertThat(checkbox.isLit()).isTrue();
+
+            assertThat(checkbox.labels())
+                .containsExactly("Muted");
+            assertThat(checkbox.selectedIndex())
+                .isZero();
+            assertThat(checkbox.isLit())
+                .isTrue();
         }
 
         @Test
         void litLeavesNoCellLitWhenOff() {
             var checkbox = ControlSpec.Checkbox.lit("Muted", false, ControlAction.NONE);
-            assertThat(checkbox.selectedIndex()).isEqualTo(ControlSpec.NO_SELECTION);
-            assertThat(checkbox.isLit()).isFalse();
+
+            assertThat(checkbox.selectedIndex())
+                .isEqualTo(ControlSpec.NO_SELECTION);
+            assertThat(checkbox.isLit())
+                .isFalse();
         }
 
         @Test
@@ -97,8 +147,11 @@ final class ControlSpecTest {
             // pinned by capturing which cell the action was invoked with.
             var firedCell = new int[] {-99};
             var checkbox = ControlSpec.Checkbox.lit("Muted", false, cell -> firedCell[0] = cell);
+
             checkbox.action().activateCell(0);
-            assertThat(firedCell[0]).isZero();
+
+            assertThat(firedCell[0])
+                .isZero();
         }
     }
 
@@ -108,15 +161,21 @@ final class ControlSpecTest {
         @Test
         void litLightsCellZeroWhenOn() {
             var toggle = ControlSpec.Toggle.lit("Factions", true, ControlAction.NONE);
-            assertThat(toggle.labels()).containsExactly("Factions");
-            assertThat(toggle.selectedIndex()).isZero();
-            assertThat(toggle.isLit()).isTrue();
+
+            assertThat(toggle.labels())
+                .containsExactly("Factions");
+            assertThat(toggle.selectedIndex())
+                .isZero();
+            assertThat(toggle.isLit())
+                .isTrue();
         }
 
         @Test
         void litLeavesNoCellLitWhenOff() {
             var toggle = ControlSpec.Toggle.lit("Factions", false, ControlAction.NONE);
-            assertThat(toggle.selectedIndex()).isEqualTo(ControlSpec.NO_SELECTION);
+
+            assertThat(toggle.selectedIndex())
+                .isEqualTo(ControlSpec.NO_SELECTION);
         }
     }
 
@@ -126,8 +185,11 @@ final class ControlSpecTest {
         @Test
         void labelIsATextOnlyRowCarryingItsTextAsItsLabel() {
             var label = new ControlSpec.Label("Non-allied factions are");
-            assertThat(label.text()).isEqualTo("Non-allied factions are");
-            assertThat(label.labels()).containsExactly("Non-allied factions are");
+
+            assertThat(label.text())
+                .isEqualTo("Non-allied factions are");
+            assertThat(label.labels())
+                .containsExactly("Non-allied factions are");
         }
     }
 
@@ -137,140 +199,175 @@ final class ControlSpecTest {
         @Test
         void dividerIsARuleWithNoLabel() {
             // A divider is drawn but never clicked and carries no text, so it holds no label.
-            assertThat(new ControlSpec.Divider().labels()).isEmpty();
+            assertThat(new ControlSpec.Divider().labels())
+                .isEmpty();
         }
     }
 
     @Nested
-    class VerticalTableIconList {
+    class CreateColumnTable {
 
         @Test
-        void iconListIsAVerticalDeselectableTableCarryingIcons() {
-            // The icon list is a vertical, deselectable table; the non-empty icon paths are what mark it
-            // as the icon-drawing variant rather than a label-only table.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.reselect()).isEqualTo(ReselectBehaviour.DESELECT);
-            assertThat(picker.labels()).containsExactly("Hegemony", "Tri-Tachyon");
-            assertThat(picker.iconPaths()).containsExactly("crest_heg", "crest_tt");
+        void createColumnTableLaysItsRowsInColumns() {
+            // The geometry is what the table states about itself, so a picker's rows lay out as a table
+            // whatever their slots hold - a stack whose rows all lead with nothing is a table still.
+            var picker = ControlSpec.VerticalTable.createColumnTable(
+                VerticalTableSpecs.buildRows(List.of("Hegemony", "Tri-Tachyon")),
+                ControlSpec.NO_SELECTION,
+                ControlAction.NONE);
+
+            assertThat(picker.rowGeometry())
+                .isEqualTo(RowGeometry.COLUMNS);
         }
 
         @Test
-        void iconListKeepsNullIconEntriesForIconlessOptions() {
-            // A crestless option (every alliance) rides as a null entry, so the list stays aligned to
-            // the labels index for index; the copy must preserve the null rather than reject it.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Free Traders"),
-                Arrays.asList("crest_heg", null), 0, ControlAction.NONE);
-            assertThat(picker.iconPaths()).containsExactly("crest_heg", null);
+        void createColumnTableStandsInOneInertUnscrolledColumnUntilRefined() {
+            // What a table holds before a host refines it: every row inert on a re-pick, one column, and
+            // pinned - so a host states only the refinements its own list wants.
+            var picker = ControlSpec.VerticalTable.createColumnTable(
+                VerticalTableSpecs.buildRows(List.of("Hegemony", "Tri-Tachyon")),
+                ControlSpec.NO_SELECTION,
+                ControlAction.NONE);
+
+            assertThat(picker.reselect())
+                .isEqualTo(ReselectBehaviour.INERT);
+            assertThat(picker.columnCount())
+                .isEqualTo(1);
+            assertThat(picker.scrolls())
+                .isFalse();
         }
 
         @Test
-        void iconListLightsTheSelectedOption() {
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), 1, ControlAction.NONE);
-            assertThat(picker.selectedIndex()).isEqualTo(1);
+        void createColumnTableCarriesItsRowsWhateverTheirSlotsHold() {
+            // A row states what it leads and trails with itself, so a crested, valued row and a bare one
+            // stack in one list rather than in a list per column that must stay index-aligned.
+            var picker = ControlSpec.VerticalTable.createColumnTable(
+                VerticalTableSpecs.buildRows(
+                    List.of("Hegemony", "Free Traders"),
+                    Arrays.asList("crest_heg", null),
+                    List.of("7")),
+                0,
+                ControlAction.NONE);
+
+            assertThat(picker.labelledRows())
+                .hasSize(2);
+            assertThat(picker.labelledRows().get(0).leadingRowSlot())
+                .isEqualTo(new RowSlot.Image("crest_heg"));
+            assertThat(picker.labelledRows().get(0).trailingRowSlot())
+                .isEqualTo(new RowSlot.Text(new TextSpan("7", VerticalTableSpecs.ROW_TEXT_COLOUR)));
+            assertThat(picker.labelledRows().get(1).leadingRowSlot())
+                .isEqualTo(RowSlot.EMPTY);
+            assertThat(picker.labelledRows().get(1).trailingRowSlot())
+                .isEqualTo(RowSlot.EMPTY);
         }
 
         @Test
-        void iconListDoesNotAliasTheCallersIconPathList() {
-            // The caller may hand in a mutable list it goes on to reuse; the table must copy it, so a
-            // later mutation of the caller's list cannot rewrite the drawn icons.
-            var callerIconPaths = new ArrayList<String>(List.of("crest_heg", "crest_tt"));
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                callerIconPaths, 0, ControlAction.NONE);
-            callerIconPaths.set(0, "crest_mutated");
-            assertThat(picker.iconPaths()).containsExactly("crest_heg", "crest_tt");
+        void createColumnTableLightsTheSelectedRow() {
+
+            var picker = VerticalTableSpecs.buildIconList(
+                List.of("Hegemony", "Tri-Tachyon"),
+                List.of("crest_heg", "crest_tt"),
+                1,
+                ControlAction.NONE);
+
+            assertThat(picker.selectedIndex())
+                .isEqualTo(1);
         }
 
         @Test
-        void iconListCarriesTheClickActionByOptionIndex() {
+        void createColumnTableCarriesTheClickActionByRowIndex() {
+
             var firedCell = new int[] {-99};
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), ControlSpec.NO_SELECTION,
+            var picker = VerticalTableSpecs.buildIconList(
+                List.of("Hegemony", "Tri-Tachyon"),
+                List.of("crest_heg", "crest_tt"),
+                ControlSpec.NO_SELECTION,
                 cell -> firedCell[0] = cell);
+
             picker.action().activateCell(1);
-            assertThat(firedCell[0]).isEqualTo(1);
-        }
 
-        @Test
-        void iconListCarriesNoTrailingValuesWhenTheValueColumnIsEmpty() {
-            // An icon list built with no value column carries no per-option values, so the rows draw
-            // name-only; a non-empty value column is what adds the trailing value.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.trailingLabels()).isEmpty();
-        }
-
-        @Test
-        void iconListCarriesPerOptionTrailingValues() {
-            // A value column turns the list into a table: each option's value rides parallel to its
-            // label, so the row draws its crest, name, and ranked value.
-            var picker = ControlSpec.VerticalTable.iconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), List.of("7", "3"), 0, ControlAction.NONE,
-                ControlSpec.SINGLE_COLUMN);
-            assertThat(picker.trailingLabels()).containsExactly("7", "3");
-        }
-
-        @Test
-        void iconListDoesNotAliasTheCallersTrailingValueList() {
-            // Like the icon paths, the values are copied, so a later mutation of the caller's list cannot
-            // rewrite the drawn values.
-            var callerValues = new ArrayList<String>(List.of("7", "3"));
-            var picker = ControlSpec.VerticalTable.iconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), callerValues, 0, ControlAction.NONE,
-                ControlSpec.SINGLE_COLUMN);
-            callerValues.set(0, "99");
-            assertThat(picker.trailingLabels()).containsExactly("7", "3");
-        }
-
-        @Test
-        void iconListCarriesTheChosenColumnCount() {
-            // The icon list spreads the options across that many columns; the count rides on the
-            // spec so the layout and renderer both wrap the rows the same way.
-            var picker = ControlSpec.VerticalTable.iconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), List.of("7", "3"), 0, ControlAction.NONE, 2);
-            assertThat(picker.columnCount()).isEqualTo(2);
+            assertThat(firedCell[0])
+                .isEqualTo(1);
         }
     }
 
     @Nested
-    class VerticalTableDirectionTable {
+    class CreateSegmentedList {
 
         @Test
-        void directionTableCarriesADirectionTrianglePerRowAndReFires() {
-            // The sort selector's shape: a direction triangle per row (up for ascending, down for
-            // descending) and a re-fire on the lit row so a re-pick can flip the direction.
-            var selector = ControlSpec.VerticalTable.directionTable(List.of("Domination", "Presence"),
-                List.of(TriangleDirection.UP, TriangleDirection.DOWN), 0, ControlAction.NONE,
-                ReselectBehaviour.REFIRE);
-            assertThat(selector.reselect()).isEqualTo(ReselectBehaviour.REFIRE);
-            assertThat(selector.directionAt(0)).isEqualTo(TriangleDirection.UP);
-            assertThat(selector.directionAt(1)).isEqualTo(TriangleDirection.DOWN);
+        void createSegmentedListLaysItsRowsAsUniformCells() {
+            // The other geometry a stack can read as: equal cells with each name centred, rather than a
+            // table of columns - stated by which factory a host reaches for.
+            var list = ControlSpec.VerticalTable.createSegmentedList(
+                VerticalTableSpecs.buildRows(List.of("Factions", "Alliances")),
+                0,
+                ControlAction.NONE);
+
+            assertThat(list.rowGeometry())
+                .isEqualTo(RowGeometry.UNIFORM_SEGMENTS);
         }
+    }
+
+    @Nested
+    class VerticalTableLabels {
 
         @Test
-        void directionTableDrawsNoIconAndNoTrailingText() {
-            // The direction table reuses the three-column geometry with an all-null icon column and an
-            // empty text column, so the triangle is the only trailing content and no row shows a crest.
-            var selector = ControlSpec.VerticalTable.directionTable(List.of("Domination", "Presence"),
-                List.of(TriangleDirection.UP, TriangleDirection.DOWN), 0, ControlAction.NONE,
-                ReselectBehaviour.REFIRE);
-            assertThat(selector.hasIconAt(0)).isFalse();
-            assertThat(selector.hasIconAt(1)).isFalse();
-            assertThat(selector.trailingLabels()).isEmpty();
+        void labelsAreEachRowsRunsReadAsOneLine() {
+            // A row's label may be authored in several runs so part of it draws in its own colour; a
+            // strip that snaps a control to its text charges the whole line, so the runs read as one.
+            var table = ControlSpec.VerticalTable.createColumnTable(
+                List.of(VerticalTableSpecs.buildRow("Hegemony")
+                    .continuesWith(new TextSpan(" (7)", VerticalTableSpecs.ROW_TEXT_COLOUR))),
+                0,
+                ControlAction.NONE);
+
+            assertThat(table.labels())
+                .containsExactly("Hegemony (7)");
         }
+    }
+
+    @Nested
+    class HandlesReselect {
 
         @Test
-        void directionTableDoesNotAliasTheCallersDirectionList() {
-            // The caller may hand in a mutable list it goes on to reuse; the table must copy it, so a
-            // later mutation of the caller's list cannot rewrite the drawn triangles - the same guard
-            // the icon-path and value lists get.
-            var callerDirections = new ArrayList<TriangleDirection>(
-                List.of(TriangleDirection.UP, TriangleDirection.DOWN));
-            var selector = ControlSpec.VerticalTable.directionTable(List.of("Domination", "Presence"),
-                callerDirections, 0, ControlAction.NONE, ReselectBehaviour.REFIRE);
-            callerDirections.set(0, TriangleDirection.DOWN);
-            assertThat(selector.directionAt(0)).isEqualTo(TriangleDirection.UP);
+        void handlesReselectCarriesTheChosenBehaviourAndLeavesTheRestAsItWas() {
+            // A spotlight list clears on a re-pick of its lit row; the refinement changes that alone, so
+            // everything the layout reads stays as the factory built it.
+            var picker = ControlSpec.VerticalTable
+                .createColumnTable(
+                    VerticalTableSpecs.buildRows(List.of("Hegemony", "Tri-Tachyon")),
+                    1,
+                    ControlAction.NONE)
+                .handlesReselect(ReselectBehaviour.DESELECT);
+
+            assertThat(picker.reselect())
+                .isEqualTo(ReselectBehaviour.DESELECT);
+            assertThat(picker.labels())
+                .containsExactly("Hegemony", "Tri-Tachyon");
+            assertThat(picker.selectedIndex())
+                .isEqualTo(1);
+            assertThat(picker.rowGeometry())
+                .isEqualTo(RowGeometry.COLUMNS);
+        }
+    }
+
+    @Nested
+    class SpreadsAcross {
+
+        @Test
+        void spreadsAcrossFoldsTheRowsAcrossThatManyColumns() {
+            // The count rides on the spec so the layout and the renderer fold the rows the same way.
+            var picker = ControlSpec.VerticalTable
+                .createColumnTable(
+                    VerticalTableSpecs.buildRows(List.of("Hegemony", "Tri-Tachyon")),
+                    0,
+                    ControlAction.NONE)
+                .spreadsAcross(2);
+
+            assertThat(picker.columnCount())
+                .isEqualTo(2);
+            assertThat(picker.labels())
+                .containsExactly("Hegemony", "Tri-Tachyon");
         }
     }
 
@@ -281,114 +378,42 @@ final class ControlSpecTest {
         void asScrollingMarksTheTableAsTheScrollingRegion() {
             // A picker opts its list into scrolling after building it through the ordinary factory, so
             // the copy carries the flag while everything else the layout reads stays as it was.
-            var picker = ControlSpec.VerticalTable.iconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), List.of("7", "3"), 1, ControlAction.NONE, 2);
+            var picker = VerticalTableSpecs.buildIconList(
+                List.of("Hegemony", "Tri-Tachyon"),
+                List.of("crest_heg", "crest_tt"),
+                List.of("7", "3"),
+                1,
+                ControlAction.NONE,
+                2);
+
             var scrolling = picker.asScrolling();
-            assertThat(scrolling.scrolls()).isTrue();
-            assertThat(scrolling.labels()).isEqualTo(picker.labels());
-            assertThat(scrolling.iconPaths()).isEqualTo(picker.iconPaths());
-            assertThat(scrolling.trailingLabels()).isEqualTo(picker.trailingLabels());
-            assertThat(scrolling.trailingDirections()).isEqualTo(picker.trailingDirections());
-            assertThat(scrolling.selectedIndex()).isEqualTo(picker.selectedIndex());
-            assertThat(scrolling.columnCount()).isEqualTo(picker.columnCount());
+
+            assertThat(scrolling.scrolls())
+                .isTrue();
+            assertThat(scrolling.labels())
+                .containsExactly("Hegemony", "Tri-Tachyon");
+            assertThat(scrolling.rowGeometry())
+                .isEqualTo(RowGeometry.COLUMNS);
+            assertThat(scrolling.selectedIndex())
+                .isEqualTo(1);
+            assertThat(scrolling.columnCount())
+                .isEqualTo(2);
         }
 
         @Test
         void asScrollingLeavesTheOriginalUnmarked() {
             // The copy is a fresh spec, so the source the host still holds is untouched - only the one it
             // opts in scrolls.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony"), List.of("crest_heg"),
-                0, ControlAction.NONE);
+            var picker = VerticalTableSpecs.buildIconList(
+                List.of("Hegemony"),
+                List.of("crest_heg"),
+                0,
+                ControlAction.NONE);
+
             picker.asScrolling();
-            assertThat(picker.scrolls()).isFalse();
-        }
-    }
 
-    @Nested
-    class TrailingLabelAt {
-
-        @Test
-        void trailingLabelAtIsTheOptionsValueWhenItHasOne() {
-            var picker = ControlSpec.VerticalTable.iconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), List.of("7", "3"), 0, ControlAction.NONE,
-                ControlSpec.SINGLE_COLUMN);
-            assertThat(picker.trailingLabelAt(1)).isEqualTo("3");
-        }
-
-        @Test
-        void trailingLabelAtIsEmptyForANullValueEntry() {
-            // A null entry is a real "no value", so it reads as an empty string rather than throwing.
-            var picker = ControlSpec.VerticalTable.iconList(List.of("Hegemony", "Free Traders"),
-                Arrays.asList("crest_heg", null), Arrays.asList("7", null), 0, ControlAction.NONE,
-                ControlSpec.SINGLE_COLUMN);
-            assertThat(picker.trailingLabelAt(1)).isEmpty();
-        }
-
-        @Test
-        void trailingLabelAtIsEmptyForAnIndexPastTheValueList() {
-            // A shorter (or empty) value list leaves the trailing options value-less rather than
-            // throwing, matching how a short icon-path list leaves options icon-less.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.trailingLabelAt(0)).isEmpty();
-        }
-    }
-
-    @Nested
-    class DirectionAt {
-
-        @Test
-        void directionAtIsTheOptionsTriangleWhenItHasOne() {
-            var selector = ControlSpec.VerticalTable.directionTable(List.of("Domination", "Presence"),
-                List.of(TriangleDirection.UP, TriangleDirection.DOWN), 0, ControlAction.NONE,
-                ReselectBehaviour.REFIRE);
-            assertThat(selector.directionAt(1)).isEqualTo(TriangleDirection.DOWN);
-        }
-
-        @Test
-        void directionAtIsNullForANullDirectionEntry() {
-            // A null entry is a real "no triangle", so it reads as null rather than throwing - the same
-            // shape a null icon-path or value entry takes.
-            var selector = ControlSpec.VerticalTable.directionTable(List.of("Domination", "Presence"),
-                Arrays.asList(TriangleDirection.UP, null), 0, ControlAction.NONE,
-                ReselectBehaviour.REFIRE);
-            assertThat(selector.directionAt(1)).isNull();
-        }
-
-        @Test
-        void directionAtIsNullForAnIndexPastTheDirectionList() {
-            // A shorter (or empty) direction list leaves the trailing options triangle-less rather than
-            // throwing, matching how a short value list leaves options value-less.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Tri-Tachyon"),
-                List.of("crest_heg", "crest_tt"), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.directionAt(0)).isNull();
-        }
-    }
-
-    @Nested
-    class HasIconAt {
-
-        @Test
-        void hasIconAtIsTrueForAnOptionWithANonNullIconPath() {
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Free Traders"),
-                Arrays.asList("crest_heg", null), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.hasIconAt(0)).isTrue();
-        }
-
-        @Test
-        void hasIconAtIsFalseForAnOptionWithANullIconPath() {
-            // A crestless option (an alliance) rides as a null entry, so it draws no icon.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Free Traders"),
-                Arrays.asList("crest_heg", null), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.hasIconAt(1)).isFalse();
-        }
-
-        @Test
-        void hasIconAtIsFalseForAnIndexPastTheIconPathList() {
-            // A shorter icon-path list leaves the trailing options icon-less rather than throwing.
-            var picker = VerticalTableSpecs.buildIconList(List.of("Hegemony", "Free Traders"),
-                List.of("crest_heg"), ControlSpec.NO_SELECTION, ControlAction.NONE);
-            assertThat(picker.hasIconAt(1)).isFalse();
+            assertThat(picker.scrolls())
+                .isFalse();
         }
     }
 
@@ -397,29 +422,49 @@ final class ControlSpecTest {
 
         @Test
         void tabsCarriesLabelsAndShortcuts() {
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"),
-                List.of("N", "P"), 1, ControlAction.NONE);
-            assertThat(tabs.labels()).containsExactly("No Layer", "Political Map");
-            assertThat(tabs.shortcuts()).containsExactly("N", "P");
-            assertThat(tabs.selectedIndex()).isEqualTo(1);
+
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                List.of("N", "P"),
+                1,
+                ControlAction.NONE);
+
+            assertThat(tabs.labels())
+                .containsExactly("No Layer", "Political Map");
+            assertThat(tabs.shortcuts())
+                .containsExactly("N", "P");
+            assertThat(tabs.selectedIndex())
+                .isEqualTo(1);
         }
 
         @Test
         void tabsKeepsNullShortcutEntriesForHintlessTabs() {
             // A tab with no bound shortcut rides as a null entry, so the list stays aligned to the labels
             // index for index; the copy must preserve the null rather than reject it.
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"),
-                Arrays.asList("N", null), 0, ControlAction.NONE);
-            assertThat(tabs.shortcuts()).containsExactly("N", null);
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                Arrays.asList("N", null),
+                0,
+                ControlAction.NONE);
+
+            assertThat(tabs.shortcuts())
+                .containsExactly("N", null);
         }
 
         @Test
         void tabsCarriesTheClickActionByTabIndex() {
+
             var firedTab = new int[] {-99};
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"),
-                List.of("N", "P"), 0, tab -> firedTab[0] = tab);
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                List.of("N", "P"),
+                0,
+                tab -> firedTab[0] = tab);
+
             tabs.action().activateCell(1);
-            assertThat(firedTab[0]).isEqualTo(1);
+
+            assertThat(firedTab[0])
+                .isEqualTo(1);
         }
 
         @Test
@@ -427,10 +472,16 @@ final class ControlSpecTest {
             // The caller may hand in a mutable list it goes on to reuse; the spec must copy it, so a later
             // mutation of the caller's list cannot rewrite the drawn hints.
             var callerShortcuts = new ArrayList<String>(List.of("N", "P"));
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"), callerShortcuts, 0,
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                callerShortcuts,
+                0,
                 ControlAction.NONE);
+
             callerShortcuts.set(0, "X");
-            assertThat(tabs.shortcuts()).containsExactly("N", "P");
+
+            assertThat(tabs.shortcuts())
+                .containsExactly("N", "P");
         }
     }
 
@@ -439,25 +490,40 @@ final class ControlSpecTest {
 
         @Test
         void shortcutAtIsTheTabsHintWhenItHasOne() {
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"),
-                List.of("N", "P"), 0, ControlAction.NONE);
-            assertThat(tabs.shortcutAt(1)).isEqualTo("P");
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                List.of("N", "P"),
+                0,
+                ControlAction.NONE);
+
+            assertThat(tabs.shortcutAt(1))
+                .isEqualTo("P");
         }
 
         @Test
         void shortcutAtIsEmptyForANullEntry() {
             // A null entry is a real "no hint", so it reads as an empty string rather than throwing.
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"),
-                Arrays.asList("N", null), 0, ControlAction.NONE);
-            assertThat(tabs.shortcutAt(1)).isEmpty();
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                Arrays.asList("N", null),
+                0,
+                ControlAction.NONE);
+
+            assertThat(tabs.shortcutAt(1))
+                .isEmpty();
         }
 
         @Test
         void shortcutAtIsEmptyForAnIndexPastTheShortcutList() {
             // A shorter (or empty) shortcut list leaves the trailing tabs hint-less rather than throwing.
-            var tabs = new ControlSpec.Tabs(List.of("No Layer", "Political Map"), List.of("N"), 0,
+            var tabs = new ControlSpec.Tabs(
+                List.of("No Layer", "Political Map"),
+                List.of("N"),
+                0,
                 ControlAction.NONE);
-            assertThat(tabs.shortcutAt(1)).isEmpty();
+
+            assertThat(tabs.shortcutAt(1))
+                .isEmpty();
         }
     }
 
@@ -469,10 +535,18 @@ final class ControlSpecTest {
             // The canonical constructor is public on a record, so a host can reach it directly; the copy
             // has to live there rather than in the factory for a caller's later edit not to reach the spec.
             var sourceLabels = new ArrayList<>(List.of("Short", "Full"));
-            var radio = new ControlSpec.HorizontalRadio(sourceLabels, 0, ControlAction.NONE, "",
-                SegmentSizing.UNIFORM, ReselectBehaviour.INERT);
+            var radio = new ControlSpec.HorizontalRadio(
+                sourceLabels,
+                0,
+                ControlAction.NONE,
+                "",
+                SegmentSizing.UNIFORM,
+                ReselectBehaviour.INERT);
+
             sourceLabels.add("Mutated");
-            assertThat(radio.labels()).containsExactly("Short", "Full");
+
+            assertThat(radio.labels())
+                .containsExactly("Short", "Full");
         }
     }
 
@@ -484,21 +558,34 @@ final class ControlSpecTest {
             // The plain option row a host reaches for by default: cells all the widest label's width, no
             // trailing caption, and always one lit (a re-pick of the lit segment does nothing).
             var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0, ControlAction.NONE);
-            assertThat(radio.segmentSizing()).isEqualTo(SegmentSizing.UNIFORM);
-            assertThat(radio.reselect()).isEqualTo(ReselectBehaviour.INERT);
-            assertThat(radio.trailingLabel()).isEqualTo(ControlSpec.NO_TRAILING_CAPTION);
-            assertThat(radio.hasTrailingCaption()).isFalse();
-            assertThat(radio.labels()).containsExactly("Short", "Full");
-            assertThat(radio.selectedIndex()).isZero();
+
+            assertThat(radio.segmentSizing())
+                .isEqualTo(SegmentSizing.UNIFORM);
+            assertThat(radio.reselect())
+                .isEqualTo(ReselectBehaviour.INERT);
+            assertThat(radio.trailingLabel())
+                .isEqualTo(ControlSpec.NO_TRAILING_CAPTION);
+            assertThat(radio.hasTrailingCaption())
+                .isFalse();
+            assertThat(radio.labels())
+                .containsExactly("Short", "Full");
+            assertThat(radio.selectedIndex())
+                .isZero();
         }
 
         @Test
         void ofCarriesTheClickActionByOptionIndex() {
+
             var firedCell = new int[] {-99};
-            var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0,
+            var radio = ControlSpec.HorizontalRadio.of(
+                List.of("Short", "Full"),
+                0,
                 cell -> firedCell[0] = cell);
+
             radio.action().activateCell(1);
-            assertThat(firedCell[0]).isEqualTo(1);
+
+            assertThat(firedCell[0])
+                .isEqualTo(1);
         }
 
         @Test
@@ -509,9 +596,13 @@ final class ControlSpecTest {
                 .showsCaption("Names")
                 .sizesSegments(SegmentSizing.SNAPPED)
                 .handlesReselect(ReselectBehaviour.DESELECT);
-            assertThat(radio.trailingLabel()).isEqualTo("Names");
-            assertThat(radio.segmentSizing()).isEqualTo(SegmentSizing.SNAPPED);
-            assertThat(radio.reselect()).isEqualTo(ReselectBehaviour.DESELECT);
+
+            assertThat(radio.trailingLabel())
+                .isEqualTo("Names");
+            assertThat(radio.segmentSizing())
+                .isEqualTo(SegmentSizing.SNAPPED);
+            assertThat(radio.reselect())
+                .isEqualTo(ReselectBehaviour.DESELECT);
         }
     }
 
@@ -521,14 +612,18 @@ final class ControlSpecTest {
         @Test
         void hasTrailingCaptionIsFalseOnAPlainRow() {
             var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0, ControlAction.NONE);
-            assertThat(radio.hasTrailingCaption()).isFalse();
+
+            assertThat(radio.hasTrailingCaption())
+                .isFalse();
         }
 
         @Test
         void hasTrailingCaptionIsTrueOnACaptionedRow() {
             var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0, ControlAction.NONE)
                 .showsCaption("Names");
-            assertThat(radio.hasTrailingCaption()).isTrue();
+
+            assertThat(radio.hasTrailingCaption())
+                .isTrue();
         }
 
         @Test
@@ -537,7 +632,9 @@ final class ControlSpecTest {
             // uncaptioned row, so the layout reserves no footprint the renderer then draws nothing in.
             var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0, ControlAction.NONE)
                 .showsCaption("   ");
-            assertThat(radio.hasTrailingCaption()).isFalse();
+
+            assertThat(radio.hasTrailingCaption())
+                .isFalse();
         }
     }
 
@@ -546,13 +643,20 @@ final class ControlSpecTest {
 
         @Test
         void showsCaptionSetsOnlyTheTrailingLabel() {
+
             var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0, ControlAction.NONE)
                 .showsCaption("Names");
-            assertThat(radio.trailingLabel()).isEqualTo("Names");
-            assertThat(radio.segmentSizing()).isEqualTo(SegmentSizing.UNIFORM);
-            assertThat(radio.reselect()).isEqualTo(ReselectBehaviour.INERT);
-            assertThat(radio.labels()).containsExactly("Short", "Full");
-            assertThat(radio.selectedIndex()).isZero();
+
+            assertThat(radio.trailingLabel())
+                .isEqualTo("Names");
+            assertThat(radio.segmentSizing())
+                .isEqualTo(SegmentSizing.UNIFORM);
+            assertThat(radio.reselect())
+                .isEqualTo(ReselectBehaviour.INERT);
+            assertThat(radio.labels())
+                .containsExactly("Short", "Full");
+            assertThat(radio.selectedIndex())
+                .isZero();
         }
     }
 
@@ -565,11 +669,17 @@ final class ControlSpecTest {
             // option's, so a ragged row does not waste space as even cells.
             var radio = ControlSpec.HorizontalRadio.of(List.of("Short", "Full"), 0, ControlAction.NONE)
                 .sizesSegments(SegmentSizing.SNAPPED);
-            assertThat(radio.segmentSizing()).isEqualTo(SegmentSizing.SNAPPED);
-            assertThat(radio.trailingLabel()).isEmpty();
-            assertThat(radio.reselect()).isEqualTo(ReselectBehaviour.INERT);
-            assertThat(radio.labels()).containsExactly("Short", "Full");
-            assertThat(radio.selectedIndex()).isZero();
+
+            assertThat(radio.segmentSizing())
+                .isEqualTo(SegmentSizing.SNAPPED);
+            assertThat(radio.trailingLabel())
+                .isEmpty();
+            assertThat(radio.reselect())
+                .isEqualTo(ReselectBehaviour.INERT);
+            assertThat(radio.labels())
+                .containsExactly("Short", "Full");
+            assertThat(radio.selectedIndex())
+                .isZero();
         }
     }
 
@@ -579,14 +689,22 @@ final class ControlSpecTest {
         @Test
         void handlesReselectSetsOnlyTheReselectBehaviour() {
             // A horizontal on/off selector: re-picking the lit segment fires the action to turn it off.
-            var radio = ControlSpec.HorizontalRadio.of(List.of("Factions", "Alliances"),
-                ControlSpec.NO_SELECTION, ControlAction.NONE)
+            var radio = ControlSpec.HorizontalRadio.of(
+                    List.of("Factions", "Alliances"),
+                    ControlSpec.NO_SELECTION,
+                    ControlAction.NONE)
                 .handlesReselect(ReselectBehaviour.DESELECT);
-            assertThat(radio.reselect()).isEqualTo(ReselectBehaviour.DESELECT);
-            assertThat(radio.segmentSizing()).isEqualTo(SegmentSizing.UNIFORM);
-            assertThat(radio.trailingLabel()).isEmpty();
-            assertThat(radio.labels()).containsExactly("Factions", "Alliances");
-            assertThat(radio.selectedIndex()).isEqualTo(ControlSpec.NO_SELECTION);
+
+            assertThat(radio.reselect())
+                .isEqualTo(ReselectBehaviour.DESELECT);
+            assertThat(radio.segmentSizing())
+                .isEqualTo(SegmentSizing.UNIFORM);
+            assertThat(radio.trailingLabel())
+                .isEmpty();
+            assertThat(radio.labels())
+                .containsExactly("Factions", "Alliances");
+            assertThat(radio.selectedIndex())
+                .isEqualTo(ControlSpec.NO_SELECTION);
         }
     }
 }
